# git-duet-wrap-for-sops

./: .gitignore  .mergify.yml  .versio.yaml  Cargo.toml  Makefile  README.md
.github/workflows/: automerge.yml  build-releases.yml  commit-message.yml  release-assets.yml  release-pr.yml  release.yml  test-and-tag.yml  tests.yml  update-tap.yml
homebrew/: formula.rb.j2
src/: main.rs
